[package]
name = "visionsort"
version = "0.1.0"
edition = "2021"

[lib]
name = "visionsort"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dev-dependencies]

[profile.release]
opt-level = "s"
lto = true
